baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_class_destructure_namespaces/baml_tests__diagnostic_errors__patterns_class_destructure_namespaces__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.namespace_relative_generic_class_type_pattern_requires_type_args(boxed: llm.openai.Box<int>) -> int  [expr] {
  {  } match (boxed) { llm.openai.Box => 1 }
}
function user.namespaced_class_destructure_unknown_field(response: root.llm.openai.Response) -> int  [expr] {
  {  } match (response) { root.llm.openai.Response { missing: missing } => 1, _ => 0 }
}
function user.namespaced_generic_class_type_pattern_rejects_extra_type_args(boxed: root.llm.openai.Box<int>) -> int  [expr] {
  {  } match (boxed) { root.llm.openai.Box<int, string> => 1, _ => 0 }
}
function user.namespaced_generic_class_type_pattern_requires_type_args(boxed: root.llm.openai.Box<int>) -> int  [expr] {
  {  } match (boxed) { root.llm.openai.Box => 1 }
}
function user.namespaced_non_generic_class_type_pattern_rejects_type_args(response: root.llm.openai.Response) -> int  [expr] {
  {  } match (response) { root.llm.openai.Response<int> => 1 }
}
class user.llm.openai.Box {
  value: T
}
class user.llm.openai.Box$stream {
  value: T | null
}
class user.llm.openai.Response {
  score: int
}
class user.llm.openai.Response$stream {
  score: int | null
}
