baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_class_destructure_namespaces/baml_tests__diagnostic_errors__patterns_class_destructure_namespaces__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.namespaced_generic_class_type_pattern_requires_type_args(boxed: user.llm.openai.Box<int>) -> int throws never {
  { : 1
    match (boxed : user.llm.openai.Box<int>) : 1
      root.llm.openai.Box =>
        1 : 1
  }
  !! 159..160: class `Box` expects 1 type argument(s), got 0
}
function user.namespace_relative_generic_class_type_pattern_requires_type_args(boxed: user.llm.openai.Box<int>) -> int throws never {
  { : 1
    match (boxed : user.llm.openai.Box<int>) : 1
      llm.openai.Box =>
        1 : 1
  }
  !! 327..328: class `Box` expects 1 type argument(s), got 0
}
function user.namespaced_generic_class_type_pattern_rejects_extra_type_args(boxed: user.llm.openai.Box<int>) -> int throws never {
  { : 1 | 0
    match (boxed : user.llm.openai.Box<int>) : 1 | 0
      root.llm.openai.Box<int, string> =>
        1 : 1
      _ =>
        0 : 0
  }
  !! 515..516: class `Box` expects 1 type argument(s), got 2
}
function user.namespaced_non_generic_class_type_pattern_rejects_type_args(response: user.llm.openai.Response) -> int throws never {
  { : 1
    match (response : user.llm.openai.Response) : 1
      root.llm.openai.Response<int> =>
        1 : 1
  }
  !! 720..721: class `Response` expects 0 type argument(s), got 1
}
function user.namespaced_class_destructure_unknown_field(response: user.llm.openai.Response) -> int throws never {
  { : 1 | 0
    match (response : user.llm.openai.Response) : 1 | 0
      root.llm.openai.Response { missing: missing } =>
        1 : 1
      _ =>
        0 : 0
  }
  !! 886..893: type `user.llm.openai.Response` has no member `missing`
}
class user.llm.openai.Box {
  value: T
}
class user.llm.openai.Response {
  score: int
}
class user.llm.openai.Box$stream {
  value: null | T
}
class user.llm.openai.Response$stream {
  score: null | int
}
