baml_language/crates/baml_tests/snapshots/diagnostic_errors/patterns_class_destructure_namespaces/baml_tests__diagnostic_errors__patterns_class_destructure_namespaces__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: class `Box` expects 1 type argument(s), got 0
   ╭─[ main.baml:3:32 ]
   │
 3 │         root.llm.openai.Box => 1
   │                                ┬  
   │                                ╰── class `Box` expects 1 type argument(s), got 0
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: class `Box` expects 1 type argument(s), got 0
   ╭─[ main.baml:9:27 ]
   │
 9 │         llm.openai.Box => 1
   │                           ┬  
   │                           ╰── class `Box` expects 1 type argument(s), got 0
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: class `Box` expects 1 type argument(s), got 2
    ╭─[ main.baml:15:45 ]
    │
 15 │         root.llm.openai.Box<int, string> => 1,
    │                                             ┬  
    │                                             ╰── class `Box` expects 1 type argument(s), got 2
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: class `Response` expects 0 type argument(s), got 1
    ╭─[ main.baml:22:42 ]
    │
 22 │         root.llm.openai.Response<int> => 1
    │                                          ┬  
    │                                          ╰── class `Response` expects 0 type argument(s), got 1
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type `user.llm.openai.Response` has no member `missing`
    ╭─[ main.baml:28:35 ]
    │
 28 │         root.llm.openai.Response { missing } => 1,
    │                                   ────┬───  
    │                                       ╰───── type `user.llm.openai.Response` has no member `missing`
    │ 
    │ Note: Error code: E0007
────╯
